JSA-20/08/2018 Servicio de correo
Modificaciones al servicio de correo

--- a/1.Layers/1.2Distributed Services/1.2.2MainModule/DS.MainModule/PlantillasHtml/RequisicionNueva.html
+++ b/1.Layers/1.2Distributed Services/1.2.2MainModule/DS.MainModule/PlantillasHtml/RequisicionNueva.html
@@ -10,11 +10,11 @@
 <!-- Favicon-->
 <link rel="icon" href="favicon.ico" type="image/x-icon">
 <!-- Font Icon -->
-<link rel="stylesheet" href="assets/plugins/bootstrap/css/bootstrap.min.css">
+<link rel="stylesheet" href="[[WebAppURL]]/assets/plugins/bootstrap/css/bootstrap.min.css">
 <!-- Custom Css -->
-<link  rel="stylesheet" href="assets/css/main.css">
-<link rel="stylesheet" href="assets/css/inbox.css">
-<link rel="stylesheet" href="assets/css/color_skins.css">
+<link  rel="stylesheet" href="[[WebAppURL]]/assets/css/main.css">
+<link rel="stylesheet" href="[[WebAppURL]]/assets/css/inbox.css">
+<link rel="stylesheet" href="[[WebAppURL]]/assets/css/color_skins.css">
 </head>
 <body class="theme-black">
 
@@ -63,9 +63,9 @@
     </div>
 </section>
 <!-- Jquery Core Js --> 
-<script src="assets/bundles/libscripts.bundle.js"></script> <!-- Lib Scripts Plugin Js --> 
-<script src="assets/bundles/vendorscripts.bundle.js"></script> <!-- Lib Scripts Plugin Js --> 
+<script src="[[WebAppURL]]/assets/bundles/libscripts.bundle.js"></script> <!-- Lib Scripts Plugin Js --> 
+<script src="[[WebAppURL]]/assets/bundles/vendorscripts.bundle.js"></script> <!-- Lib Scripts Plugin Js --> 
 
-<script src="assets/bundles/mainscripts.bundle.js"></script><!-- Custom Js --> 
+<script src="[[WebAppURL]]/assets/bundles/mainscripts.bundle.js"></script><!-- Custom Js --> 
 </body>
 </html>
