--- a/1.Layers/1.1Presentation/1.1.1Web/MVC.Presentacion/assets/js/chosen/index.html
+++ b/1.Layers/1.1Presentation/1.1.1Web/MVC.Presentacion/assets/js/chosen/index.html
@@ -1,4 +1,4 @@
-<!doctype html>
+﻿<!doctype html>
 <html lang="en">
 <head>
   <meta charset="utf-8">
@@ -786,7 +786,7 @@
             <option value="Ukraine">Ukraine</option>
             <option value="United Arab Emirates">United Arab Emirates</option>
             <option value="United Kingdom">United Kingdom</option>
-            <option value="United States">United States</option>
+            <!--<option value="United States">United States</option>-->
             <option value="United States Minor Outlying Islands">United States Minor Outlying Islands</option>
             <option value="Uruguay">Uruguay</option>
             <option value="Uzbekistan">Uzbekistan</option>
